<resources>
    <string name="app_name">WorkoutLog</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Don\'t have an account?<U>Sign Up</U></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <string name="sign_upp">Sign Up</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>